# zephyr-app-ufsm00292

./: .gitignore  CMakeLists.txt  Dockerfile  NETWORK_DRIVER.md  README.md  RELATORIO.md  docker-compose.yml  test.txt  test_serial.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: samd21_xpro.overlay
app/drivers/: Kconfig
app/drivers/ethernet/: CMakeLists.txt  bit_sanitizer.h  eth_ksz8851snl.c
app/dts/bindings/ethernet/: microchip,ksz8851snl.yaml
app/src/: ethernet_example.c  main.c
drivers/: CMakeLists.txt  Kconfig
drivers/ethernet/: CMakeLists.txt  Kconfig  eth_ksz8851snl.c
sprints/semana_2/: Relatorio_ANGELO.md
